--- a/index.html
+++ b/index.html
@@ -1,3 +1,44 @@
-<h1>Mochimochiのホームページ</h1>
-<h2>目次</h2>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My GitHub Page</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background-color: #f0f0f0;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #333;
+      color: white;
+      padding: 1rem;
+    }
+    footer {
+      padding: 1rem;
+      background-color: #333;
+      color: white;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Welcome to My GitHub Page</h1>
+  </header>
+  <main>
+    <p>ここにプロジェクトや活動内容を掲載します。</p>
+  </main>
+  <footer>
+    <p>&copy; 2024 mochi</p>
+  </footer>
+</body>
+</html>
+
+
 
