--- a/index.html
+++ b/index.html
@@ -3,42 +3,141 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My GitHub Page</title>
+  <title>たぶんかっこいいウェブページ</title>
   <style>
+    /* 全体のスタイル */
     body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      background-color: #f0f0f0;
+      font-family: 'Arial', sans-serif;
+      background-color: #f4f4f4;
       margin: 0;
       padding: 0;
+      color: #333;
     }
+
+    /* ヘッダー */
     header {
       background-color: #333;
       color: white;
-      padding: 1rem;
+      padding: 1rem 0;
+      text-align: center;
     }
+
+    /* ナビゲーションメニュー */
+    nav ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      gap: 1.5rem;
+    }
+
+    nav ul li {
+      display: inline;
+    }
+
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+      font-size: 1.2rem;
+    }
+
+    nav ul li a:hover {
+      color: #ff6600;
+    }
+
+    /* セクション */
+    section {
+      padding: 2rem;
+      background-color: white;
+      margin: 1rem 10%;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    /* セクションタイトル */
+    section h2 {
+      color: #ff6600;
+      font-size: 1.8rem;
+      border-bottom: 2px solid #ff6600;
+      padding-bottom: 0.5rem;
+    }
+
+    /* フッター */
     footer {
-      padding: 1rem;
       background-color: #333;
       color: white;
+      text-align: center;
+      padding: 1rem 0;
       position: fixed;
       bottom: 0;
       width: 100%;
     }
+
+    /* リンク */
+    a {
+      color: #007bff;
+    }
+
+    a:hover {
+      color: #ff6600;
+    }
+
+    /* 更新日表示 */
+    .update-date {
+      margin-top: 1rem;
+      font-size: 0.9rem;
+      color: #ccc;
+    }
   </style>
 </head>
 <body>
+  <!-- ヘッダー -->
   <header>
-    <h1>Welcome to My GitHub Page</h1>
+    <h1>Welcome to My Page</h1>
+    <nav>
+      <ul>
+        <li><a href="#about">自己紹介</a></li>
+        <li><a href="#projects">プロジェクト</a></li>
+        <li><a href="https://www.quark.hiroshima-u.ac.jp" target="_blank">クォーク物理学研究室</a></li>
+      </ul>
+    </nav>
   </header>
-  <main>
-    <p>ここにプロジェクトや活動内容を掲載します。</p>
-  </main>
+  
+  <!-- 自己紹介セクション -->
+  <section id="about">
+    <h2>自己紹介</h2>
+    <p>広島大学で学んでいます。趣味はプログラミングと読書です。</p>
+  </section>
+  
+  <!-- プロジェクトセクション -->
+  <section id="projects">
+    <h2>プロジェクト</h2>
+    <p>後日更新、、、、</p>
+  </section>
+  
+  <!-- フッター -->
   <footer>
-    <p>&copy; 2024 mochi</p>
+    <p>&copy; 2024 松本</p>
+    <p class="update-date">最終更新日: <span id="last-updated"></span></p>
   </footer>
+
+  <!-- JavaScriptで更新日を挿入 -->
+  <script>
+    // 更新日を表示するためのJavaScript
+    const lastUpdatedElement = document.getElementById('last-updated');
+    const lastUpdatedDate = new Date(document.lastModified);
+    
+    // 日付を "YYYY年MM月DD日" の形式に整形
+    const formattedDate = lastUpdatedDate.getFullYear() + '年' +
+                          (lastUpdatedDate.getMonth() + 1) + '月' + 
+                          lastUpdatedDate.getDate() + '日';
+    
+    lastUpdatedElement.textContent = formattedDate;
+  </script>
 </body>
 </html>
+
+
 
 
 
