--- a/index.html
+++ b/index.html
@@ -215,9 +215,10 @@
 
     <!-- Footer -->
     <footer class="bg-gray-800 text-white text-center p-8">
-        <p>&copy; <span id="current-year"></span> Takuma Matsumoto</p>
+        <p>© <span id="current-year"></span> Takuma Matsumoto</p>
         <p class="mt-2">このページは個人の趣味で作成されたものです。</p>
-    </footer>
+        <p class="mt-4"><a href="troubleshooting.html" class="text-gray-300 hover:text-white hover:underline">サイトのトラブルシューティング</a></p>
+    </footer>   
 
     <script>
         // Mobile menu toggle
