--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     <footer class="bg-gray-800 text-white text-center p-8">
         <p>© <span id="current-year"></span> Takuma Matsumoto</p>
         <p class="mt-2">このページは個人の趣味で作成されたものです。</p>
-        <p class="mt-4"><a href="troubleshooting.html" class="text-gray-300 hover:text-white hover:underline">サイトのトラブルシューティング</a></p>
+        <p class="mt-4"><a href="hiroshima_grid.html" class="text-gray-300 hover:text-white hover:underline">サイトのトラブルシューティング</a></p>
     </footer>   
 
     <script>
