--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
                     <div class="mt-6">
                         <a href="mailto:matsumoto@quark.hiroshima-u.ac.jp" class="text-indigo-600 hover:text-indigo-800 font-medium">matsumoto@quark.hiroshima-u.ac.jp</a>
                         <a href="https://www.quark.hiroshima-u.ac.jp/" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:text-indigo-800 font-medium block mb-2">クォーク物理学研究室</a>
+                        <a href="hiroshima_grid.html" class="text-gray-300 hover:text-white hover:underline">トラブルシューティング</a>
+                        <a href="hiroshima_grid.html" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:text-indigo-800 font-medium block mb-2">Hiroshima Tier-2 siteについて</a>
                     </div>
                 </div>
             </div>
@@ -217,7 +219,7 @@
     <footer class="bg-gray-800 text-white text-center p-8">
         <p>© <span id="current-year"></span> Takuma Matsumoto</p>
         <p class="mt-2">このページは個人の趣味で作成されたものです。</p>
-        <p class="mt-4"><a href="hiroshima_grid.html" class="text-gray-300 hover:text-white hover:underline">サイトのトラブルシューティング</a></p>
+        <p class="mt-4"><a href="troubleshooting.html" class="text-gray-300 hover:text-white hover:underline">トラブルシューティング</a></p>
     </footer>   
 
     <script>
