--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             scroll-behavior: smooth; /* Smooth scroll for anchor links */
         }
         .hero-bg {
-            background-image: url('https://placehold.co/1200x600/a0aec0/ffffff?text=ホームページへようこそ');
+            background-image: url('/images/orion.png');
             background-size: cover;
             background-position: center;
         }
@@ -40,7 +40,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
                 <div class="flex items-center">
-                    <a href="#" class="text-2xl font-bold text-indigo-600">マイページ</a>
+                    <a href="#" class="text-2xl font-bold text-indigo-600">HOME</a>
                 </div>
                 <div class="hidden md:block">
                     <div class="ml-10 flex items-baseline space-x-4">
@@ -81,9 +81,9 @@
     <header id="home" class="hero-bg text-white pt-16"> <!-- pt-16 to offset fixed navbar -->
         <div class="bg-black bg-opacity-50 min-h-[calc(100vh-4rem)] flex items-center justify-center">
             <div class="text-center p-8">
-                <h1 class="text-5xl font-bold mb-4">こんにちは！</h1>
-                <p class="text-xl mb-8">私の個人ページへようこそ。ゆっくり見ていってください。</p>
-                <a href="#about" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-6 rounded-lg text-lg transition-colors">もっと詳しく</a>
+                <h1 class="text-5xl font-bold mb-4">Hello</h1>
+                <p class="text-xl mb-8">マイページへようこそ - Welcome to my page</p>
+                <a href="#about" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-6 rounded-lg text-lg transition-colors">more details</a>
             </div>
         </div>
     </header>
@@ -101,12 +101,14 @@
                 <div class="md:w-2/3">
                     <h3 class="text-2xl font-semibold text-gray-700 mb-4">松本 拓磨(Takuma Matsumoto)</h3>
                     <p class="text-gray-600 leading-relaxed mb-4">
-                        はじめまして！ウェブ開発と新しい技術に情熱を燃やす松本です。
-                        このページでは、私の趣味や日常、そしてお気に入りの場所などをご紹介しています。
-                        どうぞごゆっくりご覧ください。
+                        <p class="text-gray-600 leading-relaxed mb-4">
+                        はじめまして！
+                        研究歴等はクォーク物理学研究室の<a href="https://www.quark.hiroshima-u.ac.jp/member/activity/24matsumoto.html" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:underline">ページ</a>に記載してあります。
+                        
+                    </p>
                     </p>
                     <p class="text-gray-600 leading-relaxed">
-                        インタラクティブなデザインやユーザーエクスペリエンスの向上に関心があり、常に新しいことを学び続けています。
+                        趣味はスイーツ巡り、電車旅、写真撮影、サイクリング、ハイキングなど多岐にわたります。新しい技術を学ぶことや、自然の中でリフレッシュすることが好きです。
                         何か面白いプロジェクトやアイデアがあれば、ぜひお声がけください！
                     </p>
                     <div class="mt-6">
