--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     </p>
                     <p class="text-gray-600 leading-relaxed">
                         趣味はスイーツ巡り、電車旅、写真撮影、サイクリング、ハイキングなど多岐にわたります。新しい技術を学ぶことや、自然の中でリフレッシュすることが好きです。
-                        何か面白いプロジェクトやアイデアがあれば、ぜひお声がけください！
+                        何か面白いプロジェクトやアイデアがあれば、ぜひ！
                     </p>
                     <div class="mt-6">
                         <a href="mailto:matsumoto@quark.hiroshima-u.ac.jp" class="text-indigo-600 hover:text-indigo-800 font-medium">matsumoto@quark.hiroshima-u.ac.jp</a>
