--- a/programing/main.html
+++ b/programing/main.html
@@ -3,63 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>トラブルシューティング - My page</title>
+    <title>趣味: プログラミング</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Inter', 'Noto Sans JP', sans-serif; }
-        .section-title { @apply text-3xl font-bold text-center mb-12 text-gray-800; }
-        /* 戻るボタン用のスタイルを追加 */
-        .back-link { @apply inline-block bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded-lg transition-colors; }
+        body {
+            font-family: 'Inter', 'Noto Sans JP', sans-serif;
+        }
     </style>
 </head>
 <body class="bg-gray-100">
 
-    <header class="bg-white shadow-md">
-        <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
-            <h1 class="text-3xl font-bold text-gray-900">トラブルシューティング</h1>
-        </div>
-    </header>
-
-    <main class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:px-8">
-        <div class="bg-white rounded-xl shadow-xl p-8 md:p-12">
-            <h2 class="text-2xl font-semibold text-gray-800 mb-6">よくあるご質問 (FAQ)</h2>
-
-            <div class="mb-8">
-                <h3 class="text-lg font-semibold text-gray-700 mb-2">Q. ページが正しく表示されません。</h3>
-                <p class="text-gray-600">
-                    A. まずはページの再読み込み（リロード）をお試しください。それでも改善しない場合は、ブラウザのキャッシュをクリアすることで解決する場合があります。また、お使いのブラウザが最新版であるかもご確認ください。
-                </p>
-            </div>
-
-            <div class="mb-8">
-                <h3 class="text-lg font-semibold text-gray-700 mb-2">Q. リンクをクリックしてもページが開きません。</h3>
-                <p class="text-gray-600">
-                    A. サイトの更新直後には、一時的にリンクが機能しないことがあります。時間をおいて再度お試しください。問題が続く場合は、お手数ですがページ下部の連絡先までお知らせいただけると幸いです。
-                </p>
-            </div>
+    <main class="max-w-4xl mx-auto py-16 px-4">
+        <h1 class="text-4xl font-bold text-center mb-12 text-gray-800">プログラミング特集</h1>
+        
+        <div class="bg-white rounded-xl shadow-lg p-8">
+            <img src="https://placehold.co/800x400/a7f3d0/166534?text=Projects" alt="プログラミングプロジェクト" class="w-full h-64 object-cover rounded-lg mb-8">
             
-            <div class="mb-8">
-                <h3 class="text-lg font-semibold text-gray-700 mb-2">Q. 画像が表示されません。</h3>
-                <p class="text-gray-600">
-                    A. インターネット接続が不安定な場合、画像の読み込みに失敗することがあります。接続環境をご確認の上、ページを再読み込みしてください。
-                </p>
-            </div>
+            <h2 class="text-2xl font-semibold text-gray-700 mb-4">私のプロジェクト</h2>
+            <p class="text-gray-600 leading-relaxed mb-6">
+              後日更新
+            </p>
 
             <div class="mt-12 text-center">
-                <a href="index.html" class="back-link">マイページに戻る</a>
+                <a href="/index.html" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-6 rounded-lg transition-colors">
+                    ← HOMEに戻る
+                </a>
             </div>
         </div>
     </main>
-
-    <footer class="bg-gray-800 text-white text-center p-8">
-        <p>© <span id="current-year"></span> Takuma Matsumoto</p>
-    </footer>
-
-    <script>
-        // フッターに現在の年を表示
-        document.getElementById('current-year').textContent = new Date().getFullYear();
-    </script>
 
 </body>
 </html>
