--- a/programing/cluster_shell/clustershell.html
+++ b/programing/cluster_shell/clustershell.html
@@ -163,7 +163,7 @@ clush -w @group -c myfile.conf --dest=/etc/myfile.conf</code></pre>
             <pre><code>clush -w wn[02,03] "ip addr"</code></pre>
 
             <div class="mt-16 text-center">
-                <a href="/photo/main.html" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-6 rounded-lg transition-colors no-underline">
+                <a href="/programing/main.html" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-6 rounded-lg transition-colors no-underline">
                     ← ツール特集に戻る
                 </a>
             </div>
