--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <div class="mt-6">
                         <a href="mailto:matsumoto@quark.hiroshima-u.ac.jp" class="text-indigo-600 hover:text-indigo-800 font-medium">matsumoto@quark.hiroshima-u.ac.jp</a>
                         <a href="https://www.quark.hiroshima-u.ac.jp/" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:text-indigo-800 font-medium block mb-2">クォーク物理学研究室</a>
-                        <a href="hiroshima_grid.html" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:text-indigo-800 font-medium block mb-2">Hiroshima Tier-2 siteについて</a>
+                       <!-- <a href="hiroshima_grid.html" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:text-indigo-800 font-medium block mb-2">Hiroshima Tier-2 siteについて</a> -->
                     </div>
                 </div>
             </div>
