--- a/programing/main.html
+++ b/programing/main.html
@@ -31,6 +31,15 @@
                     詳細を見る →
                 </div>
             </a>
+            <a href="/programing/grafana/grafana.html" class="block bg-gray-50 hover:bg-gray-100 rounded-lg border border-gray-200 p-6 mt-6 transition-shadow duration-300 shadow-sm hover:shadow-md">
+                <h3 class="text-xl font-bold text-indigo-700 mb-2">Grafana モニタリングツールの導入</h3>
+                <p class="text-gray-600 leading-relaxed">
+                    Grafanaを用いたモニタリングツールの導入方法を解説。Prometheusとの連携やアラート設定もカバーしています。
+                </p>
+                <div class="text-right text-indigo-600 font-semibold mt-4">
+                    詳細を見る →
+                </div>
+            </a>    
 
             <div class="mt-12 text-center">
                 <a href="/index.html" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-6 rounded-lg transition-colors">
