--- a/index.html
+++ b/index.html
@@ -94,20 +94,20 @@
     <!-- Hero Section -->
     <section id="home" class="relative h-screen overflow-hidden flex items-center justify-center bg-[#050a14]">
         <div class="absolute inset-0 z-0">
-            <img src="https://images.unsplash.com/photo-1446776811953-b23d57bd21aa?auto=format&fit=crop&w=1920&q=80" 
+            <img src="photo/image/orion.png" 
                  alt="Blue Cosmos" class="w-full h-full object-cover opacity-60 ken-burns">
             <div class="absolute inset-0 bg-gradient-to-b from-transparent via-[#050a14]/40 to-[#050a14]"></div>
         </div>
         
         <div class="relative z-10 text-center text-white px-4">
             <div class="inline-block border-l border-r border-white/20 px-8 py-2 mb-10">
-                <p class="text-[10px] tracking-[0.6em] uppercase font-light">Quark Matter & Universe</p>
+                <p class="text-[10px] tracking-[0.6em] uppercase font-light">Welcome</p>
             </div>
             <h1 class="text-6xl md:text-9xl font-bold mb-8 tracking-tighter leading-tight">
-                蒼き、<br class="md:hidden">深淵へ。
+                My、<br class="md:hidden">Pageへ。
             </h1>
             <p class="text-base md:text-lg font-light text-blue-100/70 max-w-2xl mx-auto mb-16 tracking-[0.3em]">
-                理性の光で、未知の領域を照らす。
+                ようこそ
             </p>
             <a href="#about" class="inline-flex items-center gap-6 text-[10px] tracking-[0.5em] hover:text-blue-300 transition-all group">
                 SCROLL TO EXPLORE
@@ -124,7 +124,7 @@
             <div class="relative grid md:grid-cols-12 gap-16 items-center">
                 <div class="md:col-span-5 relative group hover-reveal">
                     <div class="absolute -top-8 -left-8 w-32 h-32 border-t-2 border-l-2 border-blue-900/20 z-0"></div>
-                    <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?auto=format&fit=crop&w=800&q=80" alt="Takuma Matsumoto" class="img-reveal relative z-10 w-full rounded-sm shadow-2xl">
+                    <img src="images/intro.png" alt="Takuma Matsumoto" class="img-reveal relative z-10 w-full rounded-sm shadow-2xl">
                     <div class="absolute -bottom-4 -right-4 text-[8px] tracking-widest text-blue-900/30 uppercase vertical-text">Takuma Matsumoto</div>
                 </div>
                 <div class="md:col-span-7 md:pl-16">
@@ -136,10 +136,10 @@
                             広島大学 クォーク物理学研究室
                         </p>
                         <p>
-                            クォーク物理学という極微の世界の謎に挑んでいます。データと論理の積み重ねの先に、宇宙の真理を見出すプロセスに魅了されています。
+                            うーーー
                         </p>
                         <p>
-                            研究室を離れれば、一台のカメラを携えて星空の下へ、あるいは路地裏の甘味処へと足を運びます。静寂と喧騒、マクロとミクロ。その両極を行き来することが、私の創造性の源泉です。
+                            うーーーー
                         </p>
                     </div>
                     <div class="mt-16 flex gap-12 items-center">
@@ -162,26 +162,34 @@
                 <!-- Hobby Item 1 -->
                 <div class="wafu-card group cursor-pointer bg-white/50 p-4 rounded-xl">
                     <div class="relative aspect-[4/5] overflow-hidden rounded-lg mb-8">
-                        <img src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?auto=format&fit=crop&w=800&q=80" alt="Tech" class="img-reveal w-full h-full object-cover">
+                        <img src="images/programing.png" alt="Tech" class="img-reveal w-full h-full object-cover">
                     </div>
-                    <h3 class="text-xl font-bold mb-4 px-2">ツール・開発</h3>
-                    <p class="text-slate-500 text-sm leading-relaxed font-light px-2">計算を効率化するツールの開発や、最新のWebフレームワークの習得。論理を形にする喜びがあります。</p>
+                    <h3 class="text-xl font-bold mb-4 px-2">ツール・Linux・Computing</h3>
+                    <p class="text-slate-500 text-sm leading-relaxed font-light px-2">便利なものや、まとめたことを</p>
                 </div>
                 <!-- Hobby Item 2 -->
                 <div class="wafu-card group cursor-pointer bg-white/50 p-4 rounded-xl">
                     <div class="relative aspect-[4/5] overflow-hidden rounded-lg mb-8">
-                        <img src="https://images.unsplash.com/photo-1444703686981-a3abb99d4fe3?auto=format&fit=crop&w=800&q=80" alt="Astrophotography" class="img-reveal w-full h-full object-cover">
+                        <img src="images/camera.png" alt="Astrophotography" class="img-reveal w-full h-full object-cover">
                     </div>
                     <h3 class="text-xl font-bold mb-4 px-2">天体・風景撮影</h3>
-                    <p class="text-slate-500 text-sm leading-relaxed font-light px-2">数万光年先の光を定着させる。天体撮影は、私にとって宇宙との対話の時間です。</p>
+                    <p class="text-slate-500 text-sm leading-relaxed font-light px-2">趣味の天体撮影</p>
                 </div>
                 <!-- Hobby Item 3 -->
                 <div class="wafu-card group cursor-pointer bg-white/50 p-4 rounded-xl">
                     <div class="relative aspect-[4/5] overflow-hidden rounded-lg mb-8">
-                        <img src="https://images.unsplash.com/photo-1464822759023-fed622ff2c3b?auto=format&fit=crop&w=800&q=80" alt="Nature" class="img-reveal w-full h-full object-cover">
+                        <img src="images/nature.png" alt="Nature" class="img-reveal w-full h-full object-cover">
                     </div>
                     <h3 class="text-xl font-bold mb-4 px-2">自然・散策</h3>
-                    <p class="text-slate-500 text-sm leading-relaxed font-light px-2">サイクリングで風を感じ、山頂で空を仰ぐ。思考をリセットし、新たな視座を得るための旅。</p>
+                    <p class="text-slate-500 text-sm leading-relaxed font-light px-2">地球を感じる</p>
+                </div>
+                <!-- Hobby Item 4 -->
+                <div class="wafu-card group cursor-pointer bg-white/50 p-4 rounded-xl">
+                    <div class="relative aspect-[4/5] overflow-hidden rounded-lg mb-8">
+                        <img src="images/nature.png" alt="Nature" class="img-reveal w-full h-full object-cover">
+                    </div>
+                    <h3 class="text-xl font-bold mb-4 px-2">映画</h3>
+                    <p class="text-slate-500 text-sm leading-relaxed font-light px-2">興奮</p>
                 </div>
             </div>
         </section>
@@ -190,12 +198,12 @@
         <section id="restaurants" class="py-48 border-t border-blue-900/5">
             <div class="max-w-4xl mx-auto">
                 <div class="text-center mb-32">
-                    <span class="text-[10px] tracking-[0.5em] text-blue-900/40 uppercase block mb-6">Culinary Records</span>
-                    <h2 class="text-5xl font-bold section-title">美食の記録</h2>
+                    <span class="text-[10px] tracking-[0.5em] text-blue-900/40 uppercase block mb-6">Food Records</span>
+                    <h2 class="text-5xl font-bold section-title">おいしいもの</h2>
                 </div>
                 <div class="bg-white/40 p-3 rounded-2xl border border-blue-900/5 shadow-sm group hover-reveal cursor-pointer">
                     <div class="relative overflow-hidden rounded-xl">
-                        <img src="https://images.unsplash.com/photo-1551024601-bec78aea704b?auto=format&fit=crop&w=1200&q=80" alt="Sweets" class="img-reveal w-full h-[500px] object-cover">
+                        <img src="images/orion.png" alt="Sweets" class="img-reveal w-full h-[500px] object-cover">
                         <div class="absolute inset-0 flex flex-col items-center justify-center text-white bg-blue-950/40 opacity-0 group-hover:opacity-100 transition-all duration-700">
                             <p class="tracking-[1em] text-[10px] mb-6 font-bold">RECORDS PREPARING</p>
                             <h3 class="text-4xl font-bold italic">Coming Soon</h3>
@@ -224,8 +232,7 @@
                     </a>
                     <div class="flex gap-8 md:justify-end text-[10px] tracking-[0.3em]">
                         <span>© <span id="year"></span> Takuma Matsumoto</span>
-                        <a href="#" class="hover:text-white">PRIVACY</a>
-                        <a href="#" class="hover:text-white">SUPPORT</a>
+                        <a href="troubleshooting.html" class="hover:text-white">HELP</a>
                     </div>
                 </div>
             </div>
