--- a/index.html
+++ b/index.html
@@ -160,36 +160,36 @@
             </div>
             <div class="grid md:grid-cols-3 gap-12">
                 <!-- Hobby Item 1 -->
-                <div class="wafu-card group cursor-pointer bg-white/50 p-4 rounded-xl">
+                <a href="programing/main.html" class="wafu-card group cursor-pointer bg-white/50 p-4 rounded-xl">
                     <div class="relative aspect-[4/5] overflow-hidden rounded-lg mb-8">
                         <img src="images/programing.png" alt="Tech" class="img-reveal w-full h-full object-cover">
                     </div>
                     <h3 class="text-xl font-bold mb-4 px-2">ツール・Linux・Computing</h3>
                     <p class="text-slate-500 text-sm leading-relaxed font-light px-2">便利なものや、まとめたことを</p>
-                </div>
+                </a>
                 <!-- Hobby Item 2 -->
-                <div class="wafu-card group cursor-pointer bg-white/50 p-4 rounded-xl">
+                <a href="photo/main.html" class="wafu-card group cursor-pointer bg-white/50 p-4 rounded-xl">
                     <div class="relative aspect-[4/5] overflow-hidden rounded-lg mb-8">
                         <img src="images/camera.png" alt="Astrophotography" class="img-reveal w-full h-full object-cover">
                     </div>
                     <h3 class="text-xl font-bold mb-4 px-2">天体・風景撮影</h3>
                     <p class="text-slate-500 text-sm leading-relaxed font-light px-2">趣味の天体撮影</p>
-                </div>
+                </a>
                 <!-- Hobby Item 3 -->
-                <div class="wafu-card group cursor-pointer bg-white/50 p-4 rounded-xl">
+                <a> href="nature/main.html" class="wafu-card group cursor-pointer bg-white/50 p-4 rounded-xl">
                     <div class="relative aspect-[4/5] overflow-hidden rounded-lg mb-8">
                         <img src="images/nature.png" alt="Nature" class="img-reveal w-full h-full object-cover">
                     </div>
                     <h3 class="text-xl font-bold mb-4 px-2">自然・散策</h3>
                     <p class="text-slate-500 text-sm leading-relaxed font-light px-2">地球を感じる</p>
-                </div>
+                </a>
                 <!-- Hobby Item 4 -->
                 <div class="wafu-card group cursor-pointer bg-white/50 p-4 rounded-xl">
                     <div class="relative aspect-[4/5] overflow-hidden rounded-lg mb-8">
                         <img src="images/nature.png" alt="Nature" class="img-reveal w-full h-full object-cover">
                     </div>
                     <h3 class="text-xl font-bold mb-4 px-2">映画</h3>
-                    <p class="text-slate-500 text-sm leading-relaxed font-light px-2">興奮</p>
+                    <p class="text-slate-500 text-sm leading-relaxed font-light px-2">まだ、作ってない、、、、、、</p>
                 </div>
             </div>
         </section>
