--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <p class="text-slate-500 text-sm leading-relaxed font-light px-2">趣味の天体撮影</p>
                 </a>
                 <!-- Hobby Item 3 -->
-                <a> href="nature/main.html" class="wafu-card group cursor-pointer bg-white/50 p-4 rounded-xl">
+                <a href="nature/main.html" class="wafu-card group cursor-pointer bg-white/50 p-4 rounded-xl">
                     <div class="relative aspect-[4/5] overflow-hidden rounded-lg mb-8">
                         <img src="images/nature.png" alt="Nature" class="img-reveal w-full h-full object-cover">
                     </div>
