--- a/programing/main.html
+++ b/programing/main.html
@@ -143,6 +143,20 @@
                     </div>
                 </div>
             </a>
+            <!-- Tool 4 -->
+            <a href="docker/docker.html" class="wafu-card p-10 rounded-r-xl group flex items-start gap-10">
+                <div class="tool-index transition-colors duration-500">04</div>
+                <div>
+                    <span class="text-[9px] text-blue-900/40 tracking-[0.4em] font-bold uppercase mb-2 block"></span>
+                    <h3 class="text-2xl font-bold mb-4 text-blue-900 group-hover:text-blue-700 transition-colors">Docker</h3>
+                    <p class="text-slate-500 text-sm leading-relaxed font-light mb-6">
+                        Dockerの使い方、また、まとめる、、
+                    </p>
+                    <div class="flex items-center gap-2 text-blue-900 font-bold text-[10px] tracking-[0.2em] opacity-40 group-hover:opacity-100 transition-all">
+                        VIEW DOCUMENTATION <span class="transform group-hover:translate-x-2 transition-transform">→</span>
+                    </div>
+                </div>
+            </a>
 
         </div>
 
@@ -154,11 +168,11 @@
             </div>
         </div>
 
-        <!-- Tools List Grid (Text Centric) -->
+        <!-- Linux List Grid (Text Centric) -->
         <div class="space-y-6">
             
-            <!-- Tool 1 -->
-            <a href="cluster_shell/clustershell.html" class="wafu-card p-10 rounded-r-xl group flex items-start gap-10">
+            <!-- Linux 1 -->
+            <a href="linux/linux.html" class="wafu-card p-10 rounded-r-xl group flex items-start gap-10">
                 <div class="tool-index transition-colors duration-500">01</div>
                 <div>
                     <span class="text-[9px] text-blue-900/40 tracking-[0.4em] font-bold uppercase mb-2 block">Linux</span>
@@ -171,6 +185,49 @@
                     </div>
                 </div>
             </a>
+
+            <!-- Linux 2 -->
+            <a href="linux/section/selinux/selinux.html" class="wafu-card p-10 rounded-r-xl group flex items-start gap-10">
+                <div class="tool-index transition-colors duration-500">02</div>
+                <div>
+                    <span class="text-[9px] text-blue-900/40 tracking-[0.4em] font-bold uppercase mb-2 block">SELinux</span>
+                    <h3 class="text-2xl font-bold mb-4 text-blue-900 group-hover:text-blue-700 transition-colors">SELinux</h3>
+                    <p class="text-slate-500 text-sm leading-relaxed font-light mb-6">
+                        まとめる、、
+                    </p>
+                    <div class="flex items-center gap-2 text-blue-900 font-bold text-[10px] tracking-[0.2em] opacity-40 group-hover:opacity-100 transition-all">
+                        VIEW DOCUMENTATION <span class="transform group-hover:translate-x-2 transition-transform">→</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+
+                <!-- Single Hero Visual (Image remains only here as a theme anchor) -->
+        <div class="relative group mb-20 overflow-hidden rounded-2xl shadow-xl bg-slate-900 h-64">
+            <img src="/mochimochino.github.io/images/programing.png" alt="Tech Background" class="w-full h-full object-cover opacity-50 grayscale group-hover:grayscale-0 transition-all duration-1000">
+            <div class="absolute inset-0 flex items-center justify-center text-white">
+                <h2 class="text-3xl font-bold tracking-widest uppercase">Package Manager</h2>
+            </div>
+        </div>
+
+        <!-- Package manager List Grid (Text Centric) -->
+        <div class="space-y-6">
+            
+            <!-- PM 1 -->
+            <a href="linux/linux.html" class="wafu-card p-10 rounded-r-xl group flex items-start gap-10">
+                <div class="tool-index transition-colors duration-500">01</div>
+                <div>
+                    <span class="text-[9px] text-blue-900/40 tracking-[0.4em] font-bold uppercase mb-2 block">Package Manager</span>
+                    <h3 class="text-2xl font-bold mb-4 text-blue-900 group-hover:text-blue-700 transition-colors">Flathub</h3>
+                    <p class="text-slate-500 text-sm leading-relaxed font-light mb-6">
+                        Flathub
+                    </p>
+                    <div class="flex items-center gap-2 text-blue-900 font-bold text-[10px] tracking-[0.2em] opacity-40 group-hover:opacity-100 transition-all">
+                        VIEW DOCUMENTATION <span class="transform group-hover:translate-x-2 transition-transform">→</span>
+                    </div>
+                </div>
+            </a>
+        </div>
 
         <!-- Navigation back -->
         <div class="mt-32 text-center">
