--- a/programing/main.html
+++ b/programing/main.html
@@ -214,7 +214,7 @@
         <div class="space-y-6">
             
             <!-- PM 1 -->
-            <a href="linux/linux.html" class="wafu-card p-10 rounded-r-xl group flex items-start gap-10">
+            <a href="package_manager/flathub.html" class="wafu-card p-10 rounded-r-xl group flex items-start gap-10">
                 <div class="tool-index transition-colors duration-500">01</div>
                 <div>
                     <span class="text-[9px] text-blue-900/40 tracking-[0.4em] font-bold uppercase mb-2 block">Package Manager</span>
