--- a/programing/package_manager/flathub.html
+++ b/programing/package_manager/flathub.html
@@ -168,17 +168,19 @@
             </section>
 
             <section class="mb-16">
-                <h2 class="text-2xl font-bold mb-8 section-title">参考資料</h2>
+                <h2 class="text-2xl font-bold mb-8 section-title">Set up</h2>
                 <div class="grid grid-cols-1 gap-4">
-                    <a href="https://zenn.dev/y_mrok/books/ansible-no-tsukaikata/viewer/chapter1" target="_blank" class="doc-link-card">
-                        <div class="font-bold text-blue-900 text-sm">はじめに｜Ansible の使い方</div>
-                        <div class="text-[10px] text-slate-400 ml-auto uppercase tracking-widest">zenn.dev</div>
+                    <a href="https://flathub.org/ja/setup" target="_blank" class="doc-link-card">
+                        <div class="font-bold text-blue-900 text-sm">FlathubのSetup</div>
                     </a>
+                </div>
+                <div class="mb-6 font-light text-sm">
+                    自分のディストリビューションの公式ドキュメントの手順に従ってインストールする。
                 </div>
             </section>
 
             <section class="mb-16">
-                <h2 class="text-2xl font-bold mb-8 section-title">インベントリの定義</h2>
+                <h2 class="text-2xl font-bold mb-8 section-title">Ubuntuの場合</h2>
                 <p class="mb-6 font-light text-sm">操作対象となるサーバーを定義します。近年はYAML形式が主流ですが、INI形式も広く利用されています。</p>
                 
                 <div class="grid md:grid-cols-2 gap-6">
