--- a/programing/package_manager/flathub.html
+++ b/programing/package_manager/flathub.html
@@ -158,10 +158,10 @@
                 </p>
 
                 <!-- Featured Reference -->
-                <a href="https://qiita.com/t_nakayama0714/items/fe55ee56d6446f67113c" target="_blank" class="doc-link-card bg-blue-50/30 border-l-4 !border-l-blue-400 mb-12">
+                <a href="https://qiita.com/_masa_u/items/07ddbacd3ff90bdc1b52" target="_blank" class="doc-link-card bg-blue-50/30 border-l-4 !border-l-blue-400 mb-12">
                     <div>
-                        <div class="font-bold text-blue-900 text-lg">Ansibleをはじめる人に。 - Qiita</div>
-                        <p class="text-slate-500 mt-1 text-sm font-light">Ansible入門者向けに、基本概念から実用的な内容まで網羅的にまとめられています。</p>
+                        <div class="font-bold text-blue-900 text-lg">【Linuxユーザーへ贈る】Flatpakではじめる新しいGUIアプリ体験 - Qiita</div>
+                        <p class="text-slate-500 mt-1 text-sm font-light">Flathubの特徴がまとめられています。</p>
                         <div class="text-[10px] text-slate-400 mt-2 tracking-widest">qiita.com</div>
                     </div>
                 </a>
@@ -181,7 +181,12 @@
 
             <section class="mb-16">
                 <h2 class="text-2xl font-bold mb-8 section-title">Ubuntuの場合</h2>
-                <p class="mb-6 font-light text-sm">操作対象となるサーバーを定義します。近年はYAML形式が主流ですが、INI形式も広く利用されています。</p>
+                <div class="grid grid-cols-1 gap-4">
+                    <a href="https://flathub.org/ja/setup/Ubuntu" target="_blank" class="doc-link-card">
+                        <div class="front-bold text-blue-900 text-sm">Ubuntuでのセットアップ</div>
+                    </a>
+                </div>
+                <p class="mb-6 font-light text-sm">Ubuntuのにおけるセットアップは非常にシンプルです。</p>
                 
                 <div class="grid md:grid-cols-2 gap-6">
                     <div>
