--- a/programing/main.html
+++ b/programing/main.html
@@ -162,9 +162,9 @@
                 <div class="tool-index transition-colors duration-500">05</div>
                 <div>
                     <span class="text-[9px] text-blue-900/40 tracking-[0.4em] font-bold uppercase mb-2 block"></span>
-                    <h3 class="text-2xl font-bold mb-4 text-blue-900 group-hover:text-blue-700 transition-colors">Stream</h3>
+                    <h3 class="text-2xl font-bold mb-4 text-blue-900 group-hover:text-blue-700 transition-colors">STREAM</h3>
                     <p class="text-slate-500 text-sm leading-relaxed font-light mb-6">
-                        Streamの使い方をかんたんに、メモリ帯域幅計測
+                        STREAMの使い方をかんたんに、メモリ帯域幅計測
                     </p>
                     <div class="flex items-center gap-2 text-blue-900 font-bold text-[10px] tracking-[0.2em] opacity-40 group-hover:opacity-100 transition-all">
                         VIEW DOCUMENTATION <span class="transform group-hover:translate-x-2 transition-transform">→</span>
