--- a/programing/stream/stream.html
+++ b/programing/stream/stream.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Streamとは | Takuma Matsumoto Docs</title>
+    <title>STREAMとは | Takuma Matsumoto Docs</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho:wght@400;700&family=Noto+Serif+JP:wght@300;600&family=Inter:wght@300;600&display=swap" rel="stylesheet">
     <!-- Phosphor Icons for elegant iconography -->
@@ -154,7 +154,7 @@
         <article class="bg-white/40 p-8 md:p-16 rounded-3xl border border-white/50 shadow-sm">
             <header class="mb-16">
                 <span class="text-[10px] tracking-[0.5em] text-blue-900/40 uppercase block mb-6">Benchmark tool</span>
-                <h1 class="text-4xl md:text-5xl font-bold text-blue-900 mb-4">Streamとは</h1>
+                <h1 class="text-4xl md:text-5xl font-bold text-blue-900 mb-4">STREAMとは</h1>
                 <div class="w-20 h-1 bg-blue-900/20 mt-6"></div>
             </header>
 
