--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="max-w-7xl mx-auto px-8">
             <div class="flex items-center justify-between h-20">
                 <a href="#" class="text-xl font-bold tracking-widest text-indigo-950">
-                    松本 拓磨 <span class="text-xs font-normal ml-2 opacity-50 tracking-tighter">PHYSICS RESEARCHER</span>
+                    松本 拓磨 <span class="text-xs font-normal ml-2 opacity-50 tracking-tighter">Master Student</span>
                 </a>
                 <div class="hidden md:flex space-x-12 items-center">
                     <a href="#about" class="text-xs tracking-widest hover:text-blue-700 transition-colors font-semibold">ABOUT</a>
@@ -189,6 +189,14 @@
                         <img src="images/nature.png" alt="Nature" class="img-reveal w-full h-full object-cover">
                     </div>
                     <h3 class="text-xl font-bold mb-4 px-2">映画</h3>
+                    <p class="text-slate-500 text-sm leading-relaxed font-light px-2">まだ、作ってない、、、、、、</p>
+                </div>
+                <!-- Hobby Item 5 -->
+                <div class="wafu-card group cursor-pointer bg-white/50 p-4 rounded-xl">
+                    <div class="relative aspect-[4/5] overflow-hidden rounded-lg mb-8">
+                        <img src="images/nature.png" alt="Music" class="img-reveal w-full h-full object-cover">
+                    </div>
+                    <h3 class="text-xl font-bold mb-4 px-2">音楽</h3>
                     <p class="text-slate-500 text-sm leading-relaxed font-light px-2">まだ、作ってない、、、、、、</p>
                 </div>
             </div>
